<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/basic_info_edit_image_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_picture_jumbo_height"
        android:background="?attr/selectableItemBackground">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/user_picture_chooser_background"/>

        <ImageView
            android:id="@id/user_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user_ghost"
            android:contentDescription="user picture"/>

        <ImageView
            android:id="@+id/edit_user_pic"
            android:layout_gravity="bottom|right"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_photo_camera_white_24dp"
            android:contentDescription="edit user pic"/>

    </FrameLayout>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/name_hint"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:padding="@dimen/spacing_small"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>

    <TextView
        android:id="@+id/edit_basic_info_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginRight="12dp"
        android:layout_gravity="right"
        android:text="@string/action_save"
        style="@style/AppTheme.TextView.DeleteButton"/>


</LinearLayout>